added search box to navbar
using bootstrap glyphocon

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">projectdebug</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -42,8 +42,18 @@
         <li><a href="#">Page 3</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li>
+            <div class="col-sm-12 col-md-12 ">
+            <form class="navbar-form" role="search">
+            <div class="form-group has-feedback">
+                <input type="text" class="form-control" placeholder="Search Articles" name="q">
+                <i class="glyphicon glyphicon-search form-control-feedback"></i>
+            </div>
+            </form>
+            </div>
+        </li>
         <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>        
       </ul>
     </div>
   </div>
